# strange-mca

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  code_review_findings.md  pyproject.toml
arena/: README.md  basic_chess.py  custom_chess.py  direct_spelling_bee.py  spelling_bee.py  strange_basic_twoplayer.py  strange_chess.py  strange_rendered_twoplayer.py  strangemca_textarena.py  tictactoe.py
assets/: final_state.json
docs/: design-emergent-mca.md  gt-mca-rearchitecture-design.md  rfc-bottom-up-emergent-mca.md
examples/: README.md  run_examples.py  run_single_task.py
examples/arena/: README.md  strange_basic_twoplayer.py  strange_rendered_twoplayer.py  strangemca_textarena.py
examples/fermi/: fermi_questions.json  fermi_utils.py  run_fermi_benchmark.py
output/: final_state.json
output/viz_test_final/: final_state.json
output/viz_test_updated/: final_state.json
scripts/: README.md  lint.py  lint.sh  pre-commit
src/strange_mca/: __init__.py  agents.py  convergence.py  graph.py  logging_utils.py  main.py  prompts.py  run_strange_mca.py  test_bidirectional.py  test_bidirectional_refactored.py  test_callbacks.py  test_lint.py  test_networkx_tree.py  test_parse_response.py  test_traversal.py  tree_helpers.py  visualization.py
strange_mca/: agents.py  prompts.py  visualization.py
tests/: __init__.py  conftest.py  test_agents.py  test_convergence.py  test_emergent_properties.py  test_fermi_benchmark.py  test_graph.py  test_live_integration.py  test_main.py  test_prompts.py  test_run_strange_mca.py  test_strangemca_textarena.py  test_tree_helpers.py  test_visualization.py
