[tool.poetry]
name = "strange-mca"
version = "0.1.0"
description = "A Python project managed with Poetry"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "strange_mca", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
pydantic = "^2.5.2"
graphviz = "^0.20.1"
python-dotenv = "^1.0.0"
langgraph = "^0.3.2"
networkx = "^3.2.1"
matplotlib = "^3.8.2"

[tool.poetry.group.arena.dependencies]
textarena = {path = "/Users/jcortez/dev/TextArena", develop = true}
openai = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 